--- a/css/main.css
+++ b/css/main.css
@@ -31,87 +31,19 @@
   opacity: 1;
 }
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -121,17 +53,8 @@ video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
@@ -139,20 +62,16 @@ body {
   line-height: 1;
 }
 
-ol,
-ul {
+ol, ul {
   list-style: none;
 }
 
-blockquote,
-q {
+blockquote, q {
   quotes: none;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote:before, blockquote:after,
+q:before, q:after {
   content: "";
   content: none;
 }
@@ -240,7 +159,7 @@ body header .nav ul li a {
   font-weight: 900;
 }
 body header .nav ul li a:hover {
-  color: #1fc2c2 !important;
+  color: #1FC2C2 !important;
   text-decoration: none;
 }
 body header .nav ul li a::after {
@@ -248,7 +167,7 @@ body header .nav ul li a::after {
   display: block;
   width: 0;
   height: 2px;
-  background: #1fc2c2;
+  background: #1FC2C2;
   transition: width 0.4s;
   text-underline-position: right under;
 }
@@ -286,7 +205,7 @@ body header .support-btn {
   padding-top: 150px;
 }
 .section-start .first-section h1 strong {
-  color: #1fc2c2;
+  color: #1FC2C2;
 }
 .section-start .first-section .section-wrapper {
   padding: 0px 0px 150px 0px;
@@ -335,8 +254,7 @@ body header .support-btn {
   position: relative;
   background-color: #222;
 }
-.wave-bottom.wave-bottom:after,
-.wave-bottom.wave-top:after {
+.wave-bottom.wave-bottom:after, .wave-bottom.wave-top:after {
   content: "";
   display: block;
   margin: 0;
@@ -350,15 +268,13 @@ body header .support-btn {
   height: 64px;
 }
 @media (max-width: 768px) {
-  .wave-bottom.wave-bottom:after,
-  .wave-bottom.wave-top:after {
+  .wave-bottom.wave-bottom:after, .wave-bottom.wave-top:after {
     height: 32px;
     background-size: 100% 32px;
   }
 }
 @media (max-width: 349px) {
-  .wave-bottom.wave-bottom:after,
-  .wave-bottom.wave-top:after {
+  .wave-bottom.wave-bottom:after, .wave-bottom.wave-top:after {
     height: 16px;
     background-size: 100% 16px;
   }
@@ -373,7 +289,7 @@ body header .support-btn {
 }
 
 .hero-image {
-  background-image: url("../img/container.jpg");
+  background-image: url("../img/Ny-bild-hemsida.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -395,7 +311,7 @@ body header .support-btn {
   font-weight: bold;
 }
 .hero-image .hero-text h1 span {
-  border-right: 0.15em solid #1fc2c2;
+  border-right: 0.15em solid #1FC2C2;
   /* The typwriter cursor */
   animation: typing 3.5s steps(30, end), blink-caret 1s step-end infinite;
 }
@@ -426,12 +342,11 @@ body header .support-btn {
 }
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from,
-  to {
+  from, to {
     border-color: transparent;
   }
   50% {
-    border-color: #1fc2c2;
+    border-color: #1FC2C2;
   }
 }
 .player .vp-sidedock {
@@ -461,7 +376,7 @@ body header .support-btn {
   width: 60%;
   min-width: 350px;
   font-weight: 900;
-  color: #ebe2cd;
+  color: #EBE2CD;
 }
 
 .arrow-scroll {
@@ -507,7 +422,7 @@ section .section-wrapper ul {
 }
 
 .second-section {
-  background-color: #1fc2c2;
+  background-color: #1FC2C2;
 }
 .second-section h4 {
   font-weight: bold;
@@ -545,7 +460,7 @@ section .section-wrapper ul {
 }
 .third-section h1 strong {
   text-decoration: underline;
-  text-decoration-color: #1fc2c2;
+  text-decoration-color: #1FC2C2;
   text-underline-position: under;
 }
 .third-section .projects-container {
@@ -612,7 +527,7 @@ section .section-wrapper ul {
   grid-row-gap: 50px;
 }
 .fifth-section .citat-wrapper {
-  width: 100% !important;
+  width: 90% !important;
   margin: 0 auto;
   display: block;
 }
@@ -673,10 +588,7 @@ footer .footer-container .side-col {
   font-weight: bold;
 }
 
-div.wpforms-container-full
-  .wpforms-form
-  .wpforms-field
-  .wpforms-field-row:last-of-type {
+div.wpforms-container-full .wpforms-form .wpforms-field .wpforms-field-row:last-of-type {
   max-width: 100% !important;
 }
 
@@ -771,7 +683,7 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
   }
 
   .hero-image {
-    background-color: #ebe2cd;
+    background-color: #EBE2CD;
   }
   .hero-image video {
     display: none;
@@ -877,7 +789,7 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
     padding: 10px 0px 10px 0px;
   }
   footer div ul,
-  footer div p {
+footer div p {
     margin-bottom: 0px;
   }
 
