--- a/scss/main.scss
+++ b/scss/main.scss
@@ -260,7 +260,7 @@ body {
 //   border-right: 5px solid $blue !important;
 // }
 .hero-image {
-  background-image: url('../img/container.jpg');
+  background-image: url('../img/Ny-bild-hemsida.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
